resolved issue with horizontal scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -77,13 +77,9 @@ nav{
   border-radius: 15px;
   background: #00678a;
   color:#f5f5f5;
-  width: 100%;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-weight: bold;
   text-transform: none;
+  height: 45px;
+  line-height: 45px;
 }
 
 .navbar-container-logo{
@@ -144,7 +140,7 @@ nav{
 
 .modal{
   background: #1E1E1E;
-  width: 30%;
+  width: 40%;
   border-radius: 25px;
 }
 
@@ -197,8 +193,7 @@ h5{
   color: #eeeeee     ;
   line-height: 39px!important;
   font-size: 14px;
-  background: transparent;
-  border: 1px solid #bdbdbd ;     
+  background: #2C2C2C;   
   height: 40px;
   border-radius: 10px;
   text-transform: none;
@@ -211,6 +206,16 @@ h5{
       width: 100%;
       display: flex;
       justify-content: center;
+  }
+
+  .modal{
+    background: #1E1E1E;
+    width: 85%;
+    border-radius: 25px;
+  }
+
+  .email-template-container{
+    margin-top: 20px;
   }
 }
 
@@ -263,3 +268,11 @@ h5{
 .tabs .indicator {
   background-color:transparent;
 } /*Color of underline*/
+
+body, html {
+  overflow-x: hidden; /* Prevent horizontal overflow on the entire page */
+  margin: 0; /* Remove default margin */
+  padding: 0; /* Remove default padding */
+  width: 100%; /* Ensure body and html take full width */
+  box-sizing: border-box; /* Include padding and border in the element's total width */
+}
